--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,13 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:design:28.0.0-beta01'
-    implementation 'com.android.support:support-v4:28.0.0-beta01'
-    api 'com.android.support:gridlayout-v7:28.0.0-beta01'
+    api 'com.android.support:design:28.0.0-rc01'
+
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    api 'com.android.support:gridlayout-v7:28.0.0-rc01'
+    api 'com.android.support:coordinatorlayout:28.0.0-rc01'
+    api 'com.android.support:recyclerview-v7:28.0.0-rc01'
+
 
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
