--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,14 +27,15 @@ dependencies {
     api 'com.android.support:coordinatorlayout:28.0.0-rc01'
     api 'com.android.support:recyclerview-v7:28.0.0-rc01'
 
-
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
-
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    api 'de.hdodenhof:circleimageview:2.1.0'
+
 }
