--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +18,7 @@
         </activity>
         <activity
             android:name=".SecondaryActivity"
-            android:label="@string/title_activity_secondary"></activity>
+            android:label="@string/title_activity_secondary" />
     </application>
 
 </manifest>
