#1 Ayyoob integrating his expenses function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         <activity
             android:name=".SecondaryActivity"
             android:label="@string/title_activity_secondary" />
+
+        <activity android:name=".expenses.actiExpenses">
+
+        </activity>
     </application>
+
 
 </manifest>
