#1 adding database functionality to Sign Up -GSR

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     api 'de.hdodenhof:circleimageview:2.1.0'
+    api 'com.mcxiaoke.volley:library:1.0.19'
 
 }
