added a inventory management project manager's activity. Not fully implemented or navigated to yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".inventoryManagement.inventory_request_item"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".inventoryManagement.inventory_project_manager"></activity>
     </application>
 
 </manifest>
