--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--widnow soft input mode prevents bottom bar coming up with keyboard-->
         <activity
             android:name=".SecondaryActivity"
-            android:label="@string/title_activity_secondary" />
+            android:label="@string/title_activity_secondary"
+            android:windowSoftInputMode="adjustNothing"
+            />
         <activity android:name=".expenses.actiExpenses" />
         <activity android:name=".inventoryManagement.inventory_items_list" />
         <activity android:name=".inventoryManagement.inventory_category_grid" />
