Added generating the item list. Crashes on selecting a category at the moment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--widnow soft input mode prevents bottom bar coming up with keyboard-->
+        <!-- widnow soft input mode prevents bottom bar coming up with keyboard -->
         <activity
             android:name=".SecondaryActivity"
             android:label="@string/title_activity_secondary"
-            android:windowSoftInputMode="adjustNothing"
-            />
+            android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".expenses.actiExpenses" />
         <activity android:name=".inventoryManagement.inventory_items_list" />
         <activity android:name=".inventoryManagement.inventory_category_grid" />
@@ -37,7 +36,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".inventoryManagement.inventory_project_manager" />
         <activity android:name=".expenses.Expense_Category_List" />
-        <activity android:name=".expenses.Expense_Add"></activity>
+        <activity android:name=".expenses.Expense_Add" />
+        <activity android:name=".inventoryManagement.ParcelTest"></activity>
     </application>
 
 </manifest>
