--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
         <activity android:name=".inventoryManagement.inventory_project_manager" />
         <activity android:name=".expenses.Expense_Category_List" />
         <activity android:name=".expenses.Expense_Add" />
-        <activity android:name=".miscellaneous.addForumPost"></activity>
+        <activity android:name=".miscellaneous.addForumPost" />
+        <activity android:name=".inventoryManagement.testParcel"></activity>
     </application>
 
 </manifest>
