--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity android:name=".inventoryManagement.inventory_manager_panel" />
         <activity android:name=".inventoryManagement.testingActivity" />
         <activity android:name=".inventoryManagement.inventory_incoming_requests" />
-        <activity android:name=".inventoryManagement.inventory_inspect_request"></activity>
+        <activity android:name=".inventoryManagement.inventory_inspect_request" />
+        <activity android:name=".miscellaneous.chatRoomActivity"></activity>
     </application>
 
 </manifest>
