--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
         <activity android:name=".inventoryManagement.testingActivity" />
         <activity android:name=".inventoryManagement.inventory_incoming_requests" />
         <activity android:name=".inventoryManagement.inventory_inspect_request" />
-        <activity android:name=".miscellaneous.chatRoomActivity"></activity>
+        <activity android:name=".miscellaneous.chatRoomActivity" />
+        <activity android:name=".miscellaneous.ProfileActivity" />
     </application>
 
 </manifest>
