--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.3'
     api 'com.google.firebase:firebase-database:16.0.2'
 
+    api 'com.firebaseui:firebase-ui-database:0.4.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
