--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity android:name=".inventoryManagement.inventory_inspect_request" />
         <activity android:name=".miscellaneous.chatRoomActivity" />
         <activity android:name=".miscellaneous.ProfileActivity" />
-        <activity android:name=".Plan.displayPlan"></activity>
+        <activity android:name=".Plan.displayPlan" />
+        <activity android:name=".miscellaneous.ComposeChatRoomActivity"></activity>
     </application>
 
 </manifest>
