--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+   /* implementation 'com.github.bumptech.glide:glide:3.7.0'*/
     implementation 'com.android.support:cardview-v7:28.0.0-rc01'
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
 
@@ -53,6 +53,8 @@ dependencies {
 
     api 'com.firebaseui:firebase-ui-database:3.3.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
