Can approve and request items now. Requests not pending get properly displayed in request history. request history images change depending on status.
Item list categories now change depending on category selected.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
         <activity android:name=".miscellaneous.chatRoomActivity" />
         <activity android:name=".miscellaneous.ProfileActivity" />
         <activity android:name=".Plan.displayPlan" />
-        <activity android:name=".miscellaneous.ComposeChatRoomActivity"></activity>
+        <activity android:name=".miscellaneous.ComposeChatRoomActivity" />
+        <activity android:name=".inventoryManagement.inventory_request_history"></activity>
     </application>
 
 </manifest>
