--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
         <activity android:name=".inventoryManagement.testingActivity" />
         <activity android:name=".inventoryManagement.inventory_incoming_requests" />
         <activity android:name=".inventoryManagement.inventory_inspect_request" />
-        <activity android:name=".miscellaneous.chatRoomActivity" />
+        <activity android:name=".miscellaneous.chatRoomActivity"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden"  />    <!--Top bar kept hiding, this fixed it.-->
         <activity android:name=".miscellaneous.ProfileActivity" />
         <activity android:name=".Plan.displayPlan" />
         <activity android:name=".miscellaneous.ComposeChatRoomActivity" />
