#1 edits to ui... -GSR

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity android:name=".inventoryManagement.inventory_inspect_request" />
         <activity
             android:name=".miscellaneous.chatRoomActivity"
-            android:windowSoftInputMode="adjustPan" /> <!-- Top bar kept hiding, this fixed it. -->
+             /> <!-- Top bar kept hiding, this fixed it. -->
         <activity android:name=".miscellaneous.ProfileActivity" />
         <activity android:name=".Plan.displayPlan" />
         <activity android:name=".miscellaneous.ComposeChatRoomActivity" />
