--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
+    implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
+
 }
 apply plugin: 'com.google.gms.google-services'
