***Project Insert - issues with script ***Project View works - UI needs to be improved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,9 +56,9 @@
         <activity
             android:name=".inventoryManagement.inventory_inspect_request"
             android:parentActivityName=".inventoryManagement.inventory_incoming_requests" />
-        <activity android:name=".miscellaneous.chatRoomActivity"
-            android:windowSoftInputMode="adjustResize"
-            /> <!-- Top bar kept hiding, this fixed it. -->
+        <activity
+            android:name=".miscellaneous.chatRoomActivity"
+            android:windowSoftInputMode="adjustResize" /> <!-- Top bar kept hiding, this fixed it. -->
         <activity android:name=".miscellaneous.ProfileActivity" />
         <activity android:name=".Plan.displayPlan" />
         <activity android:name=".miscellaneous.ComposeChatRoomActivity" />
@@ -71,7 +71,10 @@
             android:name=".inventoryManagement.inventory_edit_item"
             android:parentActivityName=".inventoryManagement.inventory_edit_list" />
         <activity android:name=".inventoryManagement.inventory_stock_low" />
-        <activity android:name=".expenses.expenseReport"></activity>
+        <activity android:name=".expenses.expenseReport" />
+        <activity android:name=".Plan.ProjectDashboard" />
+        <activity android:name=".Plan.ViewProject" />
+        <activity android:name=".Plan.AddProject"></activity>
     </application>
 
 </manifest>
