***Project Display to view the project - intent used to get data from view projects, and UI is ready for Theeban to complete Update and Delete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,8 @@
         <activity android:name=".expenses.expenseReport" />
         <activity android:name=".Plan.ProjectDashboard" />
         <activity android:name=".Plan.ViewProject" />
-        <activity android:name=".Plan.AddProject"></activity>
+        <activity android:name=".Plan.AddProject" />
+        <activity android:name=".Plan.DisplayProject"></activity>
     </application>
 
 </manifest>
