--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".projectSwitcher"/>
         <activity
             android:name=".SecondaryActivity"
             android:label="@string/title_activity_secondary"
