***Plan Report function Implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,8 +77,10 @@
         <activity android:name=".Plan.ViewProject" />
         <activity android:name=".Plan.AddProject" />
         <activity android:name=".Plan.DisplayProject" />
-        <activity android:name=".miscellaneous.viewMoreForumPostActivity"
-            android:windowSoftInputMode="adjustResize"/>
+        <activity
+            android:name=".miscellaneous.viewMoreForumPostActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".Plan.PlanReport"></activity>
     </application>
 
 </manifest>
